--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Shopper</title>
+    <title>Najlepszy sklep internetowy z produktami Apple! Sprawdź!</title>
+    <meta name="description" content="Sprawdź oferowane produkty w naszym internetowym sklepie z asortymentem Apple! Najniższe ceny, duży wybór">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/output.css">
@@ -14,6 +15,7 @@
     <nav itemscope class="shadow-bottom sticky top-0 z-1000" itemtype="https://schema.org/Product">
         <ul class="hidden md:flex text-sm font-medium w-full bg-gray-100 flex-nowrap flex-row gap-5 p-2 items-center justify-center">
             <li class="cursor-pointer w-[60px] h-[60px]">
+                <a href="http://projektowanie.devjakobsze.pl/">
                 <img src="src/image/nlogo.png" alt="logo firmy Apple" class="w-full h-full object-contain" itemprop="image"
                 srcset="src/image/nlogo.png 640w,
                         src/image/nlogo.png 1024w,
@@ -23,6 +25,7 @@
                        (max-width: 1024px) 1024px,
                        (max-width: 1440px) 1440px,
                        1920px">
+                </a>
             </li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="MacBook" content="MacBook">MacBook</a></li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="AirPods" content="AirPods">AirPods</a></li>
@@ -78,6 +81,7 @@
     </div>
 </section>
 <section class="w-full gap-10 grid grid-cols-1 md:grid-cols-2 p-10" itemscope itemtype="https://schema.org/Product">
+    <h1 class="">Największy wybór produktów Apple!</h1> <!-- do dodania klasa -->
     <h6 class="hidden" itemprop="servicesInformation" content="Service Details">Informacje o usługach polecanych przez sklep</h6>
     <article class="w-full grid grid-cols-1 gap-3 text-center bg-[#F6F9FE] content-start justify-items-center rounded-lg">
         <header class="w-full text-xl font-semibold mt-5" itemprop="potentialAction" content="View Offer">Apple Watch</header>
