--- a/category.html
+++ b/category.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Shopper</title>
+    <title>Szeroki wybór iPhone'ów! Sprawdź!</title>
+    <meta name="description" content="Sprawdź iPhone'y w naszym internetowym sklepie z asortymentem Apple! Najniższe ceny, duży wybór">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/output.css">
@@ -14,6 +15,7 @@
     <nav itemscope class="shadow-bottom sticky top-0 z-1000" itemtype="https://schema.org/Product">
         <ul class="hidden md:flex text-sm font-medium w-full bg-gray-100 flex-nowrap flex-row gap-5 p-2 items-center justify-center">
             <li class="cursor-pointer w-[60px] h-[60px]">
+                <a href="http://projektowanie.devjakobsze.pl/">
                 <img src="src/image/nlogo.png" alt="logo firmy Apple" class="w-full h-full object-contain" itemprop="image"
                 srcset="src/image/nlogo.png 640w,
                         src/image/nlogo.png 1024w,
@@ -23,6 +25,7 @@
                        (max-width: 1024px) 1024px,
                        (max-width: 1440px) 1440px,
                        1920px">
+                </a>
             </li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="MacBook" content="MacBook">MacBook</a></li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="AirPods" content="AirPods">AirPods</a></li>
