--- a/product.html
+++ b/product.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Shopper</title>
+    <title>MacBook Air 13" w najlepszej cenie! Sprawdź!</title>
+    <meta name="description" content="Sprawdź MacBook Air 13 w naszym internetowym sklepie z asortymentem Apple! Najniższe ceny, duży wybór">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/output.css">
@@ -14,6 +15,7 @@
     <nav itemscope class="shadow-bottom sticky top-0 z-1000" itemtype="https://schema.org/Product">
         <ul class="hidden md:flex text-sm font-medium w-full bg-gray-100 flex-nowrap flex-row gap-5 p-2 items-center justify-center">
             <li class="cursor-pointer w-[60px] h-[60px]">
+                <a href="http://projektowanie.devjakobsze.pl/">
                 <img src="src/image/nlogo.png" alt="logo firmy Apple" class="w-full h-full object-contain" itemprop="image"
                 srcset="src/image/nlogo.png 640w,
                         src/image/nlogo.png 1024w,
@@ -23,6 +25,7 @@
                        (max-width: 1024px) 1024px,
                        (max-width: 1440px) 1440px,
                        1920px">
+                </a>
             </li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="MacBook" content="MacBook">MacBook</a></li>
             <li class="cursor-pointer hover:text-blue-500"><a href="./category.html" itemprop="AirPods" content="AirPods">AirPods</a></li>
@@ -54,7 +57,7 @@
 
 
       <section class="w-full min-h-[100px] p-5 mt-10 mb-10 flex flex-col flex-wrap gap-5" itemscope itemtype="https://schema.org/Product">
-            <h2 itemprop="productInformation" content="MacBook Air 13" class="mb-10 mt-10 w-full text-center text-3xl font-bold">MacBook Air 13"</h2>
+            <h1 itemprop="productInformation" content="MacBook Air 13" class="mb-10 mt-10 w-full text-center text-3xl font-bold">MacBook Air 13"</h1>
             <article class="w-full min-h-[100px] flex flex-row flex-wrap items-center justify-center gap-5">
                 <h6 class="hidden">Product overwiew</h6>
                 <div class="flex-[0_0_100%] md:flex-[0_0_67%] flex flex-col flex-wrap  gap-5">
@@ -240,9 +243,9 @@
     <section class="w-full flex flex-col flex-wrap gap-5 p-5" itemscope itemtype="https://schema.org/Product">
         <h6 class="hidden" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">Informacje dodatkowe</h6>
         <article class="w-full flex flex-col flex-wrap gap-3 bg-gray-100 justify-center items-center p-5 rounded-3xl">
-            <h2 class="text-blue-500 text-center text-base w-full font-medium" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
+            <h3 class="text-blue-500 text-center text-base w-full font-medium" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
                 12 MIESIĘCY GWARANCJI OD APPLE
-            </h2>
+            </h3>
             <p class="text-xs text-gray-400 text-center" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
                 Roczna gwarancja Apple to dobrowolna gwarancja udzielona przez producenta. Na jej mocy użytkownik uzyskuje uprawnienia inne niż przewidziane przez prawo konsumenckie, w tym w szczególności uprawnienia dotyczące produktów niezgodnych z umową.
                 Uprawnienia wynikające z rocznej gwarancji Apple uzupełniają zatem (a nie zastępują) uprawnienia wynikające z prawa konsumenckiego.           
@@ -253,9 +256,9 @@
     <section class="w-full flex flex-col flex-wrap gap-5 p-5" itemscope itemtype="https://schema.org/Product">
         <h6 class="hidden" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">Informacje dodatkowe</h6>
         <article class="w-full flex flex-col flex-wrap gap-3 bg-gray-100 justify-center items-center p-5 rounded-3xl">
-            <h2 class="text-blue-500 text-center text-base w-full font-medium" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
+            <h3 class="text-blue-500 text-center text-base w-full font-medium" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
                 24 MIESIĘCE NA REKLAMACJE
-            </h2>
+            </h3>
             <p class="text-xs text-gray-400 text-center" itemprop="Informacje dodatkowe" content="Informacje dodatkowe">
                 Kazdy produkt na terenie UE jest objęty 2 letnią mozliwością zwrotu w przypadku wadliwego działania. W przypadku wystąpienia wady w okresie 24 miesięcy od daty zakupu, Klient ma prawo do złożenia reklamacji. W celu złożenia reklamacji należy skontaktować się z naszym działem obsługi klienta.
             </p>
